Clone first variant only when duplicating a study (#670)
Signed-off-by: souissimai <maissa.souissi@rte-france.com>
Co-authored-by: BOUHOURS Antoine <antoine.bouhours@rte-france.com>